# serde-pickle

./: Cargo.toml  flake.nix  rust-toolchain.toml
benches/: benchmark.rs
src/: de.rs  hashable_float.rs  lib.rs  ser.rs  value.rs  value_impls.rs
test/: arby.rs  mod.rs
