[package]
name = "serde-pickle"
version = "1.2.0"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"
description = "A serde-based serialization library for Python's pickle format"
repository = "https://github.com/birkenfeld/serde-pickle"
documentation = "http://docs.rs/serde-pickle"
keywords = ["pickle", "python", "serde", "serialization"]
edition = "2018"
rust-version = "1.63"

[dependencies]
serde = "1.0.209"
byteorder = "1.5.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
iter-read = "1.1.0"

# For the example binary and the test suite.
[dev-dependencies]
criterion = "0.7"
serde_derive = "1.0.209"
serde_json = "1.0.127"
rand = "0.7"
quickcheck = "0.9.0"
# for 1.63
regex = "=1.9.6"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1
